@@ -56,7 +56,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|InputStream
+name|IOException
 import|;
 end_import
 
@@ -66,7 +66,7 @@ name|java
 operator|.
 name|io
 operator|.
-name|IOException
+name|InputStream
 import|;
 end_import
 
@@ -99,6 +99,30 @@ operator|.
 name|net
 operator|.
 name|URI
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Files
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|file
+operator|.
+name|Paths
 import|;
 end_import
 
@@ -168,19 +192,27 @@ DECL|field|TEST_ROOT_DIR
 specifier|private
 specifier|static
 specifier|final
-name|String
+name|File
 name|TEST_ROOT_DIR
 init|=
+name|Paths
+operator|.
+name|get
+argument_list|(
 name|System
 operator|.
 name|getProperty
 argument_list|(
 literal|"test.build.data"
 argument_list|,
-literal|"build/test/data/"
+literal|"build/test/data"
 argument_list|)
-operator|+
-literal|"/testText"
+argument_list|,
+literal|"testText"
+argument_list|)
+operator|.
+name|toFile
+argument_list|()
 decl_stmt|;
 DECL|field|AVRO_FILENAME
 specifier|private
@@ -190,14 +222,14 @@ name|String
 name|AVRO_FILENAME
 init|=
 operator|new
-name|Path
+name|File
 argument_list|(
 name|TEST_ROOT_DIR
 argument_list|,
 literal|"weather.avro"
 argument_list|)
 operator|.
-name|toUri
+name|toURI
 argument_list|()
 operator|.
 name|getPath
@@ -211,14 +243,14 @@ name|String
 name|TEXT_FILENAME
 init|=
 operator|new
-name|Path
+name|File
 argument_list|(
 name|TEST_ROOT_DIR
 argument_list|,
 literal|"testtextfile.txt"
 argument_list|)
 operator|.
-name|toUri
+name|toURI
 argument_list|()
 operator|.
 name|getPath
@@ -613,16 +645,15 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-operator|(
-operator|new
-name|File
+name|Files
+operator|.
+name|createDirectories
 argument_list|(
 name|TEST_ROOT_DIR
-argument_list|)
-operator|)
 operator|.
-name|mkdir
+name|toPath
 argument_list|()
+argument_list|)
 expr_stmt|;
 name|File
 name|file
